--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=fullstack
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Perfil activo por defecto
+spring.profiles.active=dev
+
+# Configuración común para todos los perfiles
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+# Configuración de logging
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=INFO
