--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=fullstack
 
 # Perfil activo por defecto
-spring.profiles.active=dev
+spring.profiles.active=test
 
 # Configuración común para todos los perfiles
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
@@ -10,3 +10,14 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 # Configuración de logging
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=INFO
+
+# Configuración de Swagger/OpenAPI
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+
+# Configuración de API externa de usuarios
+external.api.users.base-url=${EXTERNAL_API_USERS_BASE_URL:http://localhost:8080}
