--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.password=${DB_PASS:DuocUc..2025}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Configuración JPA para desarrollo
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
