--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,11 @@ springdoc.swagger-ui.tryItOutEnabled=true
 
 # Configuración de API externa de usuarios
 external.api.users.base-url=${EXTERNAL_API_USERS_BASE_URL:http://localhost:8080}
+
+# Configuración de timeouts para conexiones externas
+spring.mvc.async.request-timeout=60000
+server.tomcat.connection-timeout=30000
+
+# Configuración de logging para diagnóstico
+logging.level.com.fullstack.fullstack.Service.UserApiService=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
