--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,5 @@
 # Configuración específica para tests
-spring.profiles.active=test
+# NOTA: No definir spring.profiles.active en archivos de perfil específico
 
 # Base de datos en memoria para tests
 spring.datasource.url=jdbc:h2:mem:testdb
